--- a/LCCSProject/structure/report/index.html
+++ b/LCCSProject/structure/report/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Project Report Examination Number</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <script src="js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
 
+<div class="container">
+  <h1>Name: Examination Number:</h1>
+
+</div>
+<nav class="navbar navbar-expand-sm bg-light">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Meeting the Brief</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="investigation.html">Investigation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="plan_design.html">Plan and design</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="create.html">Create</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<div class="container-fluid p-5 bg-primary text-white text-center">
+  <h1>Meeting the brief</h1>
+  <p>400 words</p>
+
+
+ 
+</div>
+  
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Video</h3>
+       <p>This is where you should include the video of your artefact in operation. The video should be used to demonstrate how your artefact meets the basic and/or advanced requirements of the brief. You
+should deal with each requirement you attempted in the video and demonstrate how you have
+achieved it.</p>
+      
+    </div>
+   
+ 
+  </div>
+</div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Description and Demonstration of each requirement</h3>
+<p>
+You may wish to include a brief written description, with images, demonstrating how your artefact
+meets each of the requirements. You will not be penalised marks for not including any text if your
+video is sufficient in describing how you meet each of the requirements. </p>
+      
+    </div>
+   
+ 
+  </div>
+</div>
+
+</body>
+</html>
