--- a/LCCSProject/structure/Report/index.html
+++ b/LCCSProject/structure/Report/index.html
@@ -28,6 +28,12 @@
       <li class="nav-item">
         <a class="nav-link" href="create.html">Create</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="evaluation.html">Evaluation</a>
+      </li>
+         <li class="nav-item">
+        <a class="nav-link" href="references.html">References</a>
+      </li>
     </ul>
   </div>
 </nav>
